load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//runtimes:defs.bzl", "stub_library")
load(":config_probe.bzl", "libstdcxx_config_h")
load(
    ":configure.bzl",
    "libstdcxx_abi_baseline_pair",
    "libstdcxx_abi_tweaks_dir",
    "libstdcxx_atomic_word_dir",
    "libstdcxx_atomic_word_h",
    "libstdcxx_atomicity_dir",
    "libstdcxx_bits_opt_random_h",
    "libstdcxx_c_locale_h",
    "libstdcxx_c_locale_internal_h",
    "libstdcxx_cpu_defines_dir",
    "libstdcxx_cpu_defines_h",
    "libstdcxx_cpu_include_dir",
    "libstdcxx_ctype_base_h",
    "libstdcxx_ctype_inline_h",
    "libstdcxx_cxxabi_tweaks_h",
    "libstdcxx_enable_float128",
    "libstdcxx_error_constants_dir",
    "libstdcxx_error_constants_h",
    "libstdcxx_ext_opt_random_h",
    "libstdcxx_extern_template",
    "libstdcxx_have_attribute_visibility",
    "libstdcxx_host_triple",
    "libstdcxx_inline_version",
    "libstdcxx_messages_members_h",
    "libstdcxx_os_defines_h",
    "libstdcxx_os_include_dir",
    "libstdcxx_symver_style",
    "libstdcxx_thread_header_h",
    "libstdcxx_time_members_h",
    "libstdcxx_use_allocator_new",
    "libstdcxx_use_cxx11_abi",
    "libstdcxx_use_dual_abi",
)
load(":headers.bzl", "libstdcxx_cxxconfig_header", "libstdcxx_gthr_headers", "libstdcxx_largefile_config_header")

package(default_visibility = ["//visibility:public"])

libstdcxx_config_h(
    name = "config_h",
    abi_baseline_pair = libstdcxx_abi_baseline_pair(),
    abi_tweaks_dir = libstdcxx_abi_tweaks_dir(),
    atomic_word_dir = libstdcxx_atomic_word_dir(),
    atomicity_dir = libstdcxx_atomicity_dir(),
    cpu_defines_dir = libstdcxx_cpu_defines_dir(),
    cpu_include_dir = libstdcxx_cpu_include_dir(),
    error_constants_dir = libstdcxx_error_constants_dir(),
    host_triple = libstdcxx_host_triple(),
    os_include_dir = libstdcxx_os_include_dir(),
    symver_style = libstdcxx_symver_style(),
)

filegroup(
    name = "config_h_header",
    srcs = [":config_h"],
    output_group = "config_h",
)

# Configured public headers mirror libstdc++-v3/include/Makefile.am. The
# selected source labels come from configure.host fields in :configure.bzl.
copy_file(
    name = "ctype_base_h",
    src = libstdcxx_ctype_base_h(),
    out = "public_host_headers/bits/ctype_base.h",
)

copy_file(
    name = "ctype_inline_h",
    src = libstdcxx_ctype_inline_h(),
    out = "public_host_headers/bits/ctype_inline.h",
)

copy_file(
    name = "os_defines_h",
    src = libstdcxx_os_defines_h(),
    out = "public_host_headers/bits/os_defines.h",
)

copy_file(
    name = "atomic_word_h",
    src = libstdcxx_atomic_word_h(),
    out = "public_host_headers/bits/atomic_word.h",
)

copy_file(
    name = "cxxabi_tweaks_h",
    src = libstdcxx_cxxabi_tweaks_h(),
    out = "public_host_headers/bits/cxxabi_tweaks.h",
)

copy_file(
    name = "cpu_defines_h",
    src = libstdcxx_cpu_defines_h(),
    out = "public_host_headers/bits/cpu_defines.h",
)

copy_file(
    name = "error_constants_h",
    src = libstdcxx_error_constants_h(),
    out = "public_host_headers/bits/error_constants.h",
)

copy_file(
    name = "basic_file_h",
    src = "@gcc//:libstdc++-v3/config/io/basic_file_stdio.h",
    out = "public_host_headers/bits/basic_file.h",
)

copy_file(
    name = "allocator_h",
    src = "@gcc//:libstdc++-v3/config/allocator/new_allocator_base.h",
    out = "public_host_headers/bits/c++allocator.h",
)

copy_file(
    name = "cstdio_h",
    src = "@gcc//:libstdc++-v3/config/io/c_io_stdio.h",
    out = "public_host_headers/bits/c++io.h",
)

copy_file(
    name = "c_locale_h",
    src = libstdcxx_c_locale_h(),
    out = "public_host_headers/bits/c++locale.h",
)

copy_file(
    name = "messages_members_h",
    src = libstdcxx_messages_members_h(),
    out = "public_host_headers/bits/messages_members.h",
)

copy_file(
    name = "time_members_h",
    src = libstdcxx_time_members_h(),
    out = "public_host_headers/bits/time_members.h",
)

copy_file(
    name = "precompiled_stdcxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/stdc++.h",
    out = "public_host_headers/bits/stdc++.h",
)

copy_file(
    name = "precompiled_stdtr1cxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/stdtr1c++.h",
    out = "public_host_headers/bits/stdtr1c++.h",
)

copy_file(
    name = "precompiled_extcxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/extc++.h",
    out = "public_host_headers/bits/extc++.h",
)

copy_file(
    name = "bits_opt_random_h",
    src = libstdcxx_bits_opt_random_h(),
    out = "public_host_headers/bits/opt_random.h",
)

copy_file(
    name = "ext_opt_random_h",
    src = libstdcxx_ext_opt_random_h(),
    out = "public_host_headers/ext/opt_random.h",
)

libstdcxx_cxxconfig_header(
    name = "cxxconfig_h",
    basever = "@gcc//:gcc/BASE-VER",
    config_h = ":config_h_header",
    cxxconfig_template = "@gcc//:libstdc++-v3/include/bits/c++config",
    datestamp = "@gcc//:gcc/DATESTAMP",
    enable_float128 = libstdcxx_enable_float128(),
    extern_template = libstdcxx_extern_template(),
    have_attribute_visibility = libstdcxx_have_attribute_visibility(),
    inline_version = libstdcxx_inline_version(),
    use_allocator_new = libstdcxx_use_allocator_new(),
    use_cxx11_abi = libstdcxx_use_cxx11_abi(),
    use_dual_abi = libstdcxx_use_dual_abi(),
)

libstdcxx_gthr_headers(
    name = "gthr_headers",
    gthr_default_h = libstdcxx_thread_header_h(),
    gthr_h = "@gcc//:libgcc/gthr.h",
    gthr_posix_h = "@gcc//:libgcc/gthr-posix.h",
    gthr_single_h = "@gcc//:libgcc/gthr-single.h",
)

# Generated/configured headers must precede raw GCC headers, matching the
# include overlay order from libstdc++-v3/include/Makefile.am.
copy_to_directory(
    name = "generated_host_headers_include_search_directory",
    srcs = [
        ":allocator_h",
        ":atomic_word_h",
        ":basic_file_h",
        ":bits_opt_random_h",
        ":c_locale_h",
        ":cpu_defines_h",
        ":cstdio_h",
        ":ctype_base_h",
        ":ctype_inline_h",
        ":cxxabi_tweaks_h",
        ":cxxconfig_h",
        ":error_constants_h",
        ":ext_opt_random_h",
        ":gthr_headers",
        ":messages_members_h",
        ":os_defines_h",
        ":precompiled_extcxx_h",
        ":precompiled_stdcxx_h",
        ":precompiled_stdtr1cxx_h",
        ":time_members_h",
    ],
    allow_overwrites = True,
    root_paths = [
        "runtimes/libstdcxx/public_host_headers",
        "runtimes/libstdcxx/cxxconfig_h",
        "runtimes/libstdcxx/gthr_headers",
    ],
)

# Build-only private headers mirror libstdc++-v3/include/Makefile.am entries
# that are needed to compile the library but are not public installed headers.
copy_file(
    name = "c_locale_internal_h",
    src = libstdcxx_c_locale_internal_h(),
    out = "private_host_headers/bits/c++locale_internal.h",
)

copy_file(
    name = "compatibility_h",
    src = "@gcc//:libstdc++-v3/config/abi/compatibility.h",
    out = "private_host_headers/bits/compatibility.h",
)

libstdcxx_largefile_config_header(
    name = "largefile_config_h",
    config_h = ":config_h_header",
)

# During the libstdc++ build, private/generated headers override the installed
# raw headers in the same order GCC arranges its build include directory.
copy_to_directory(
    name = "build_headers_include_search_directory",
    srcs = [
        ":c_locale_internal_h",
        ":compatibility_h",
        ":generated_host_headers_include_search_directory",
        ":largefile_config_h",
    ],
    allow_overwrites = True,
    root_paths = [
        "runtimes/libstdcxx/generated_host_headers_include_search_directory",
        "runtimes/libstdcxx/private_host_headers",
        "runtimes/libstdcxx/largefile_config_h",
    ],
)

# Installed header search directory: raw GCC headers plus the backward ext
# compatibility aliases from libstdc++-v3/include/Makefile.am.
copy_to_directory(
    name = "headers_include_search_directory",
    srcs = [
        "@gcc//:libstdcxx_ext_compat_headers_include_search_directory",
        "@gcc//:libstdcxx_raw_headers_include_search_directory",
    ],
    allow_overwrites = True,
    include_external_repositories = ["**"],
    replace_prefixes = {
        "libstdcxx_ext_compat_headers_include_search_directory": "",
        "libstdcxx_raw_headers_include_search_directory": "",
    },
    visibility = ["//visibility:public"],
)

cc_library(
    name = "build_headers",
    hdrs = [
        ":build_headers_include_search_directory",
        ":headers_include_search_directory",
    ],
    includes = [
        "build_headers_include_search_directory",
        "headers_include_search_directory",
        "headers_include_search_directory/backward",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "abi_headers_include_search_directory",
    actual = ":generated_host_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "libstdcxx.shared",
    actual = "@gcc//:libstdcxx.shared",
    visibility = ["//visibility:public"],
)

copy_file(
    name = "libstdcxx_shared_real",
    src = ":libstdcxx.shared",
    out = "libstdc++.so.6.0.35",
    allow_symlink = True,
)

copy_file(
    name = "libstdcxx_shared_soname",
    src = ":libstdcxx_shared_real",
    out = "libstdc++.so.6",
    allow_symlink = True,
)

copy_file(
    name = "libstdcxx_shared_linker_name",
    src = ":libstdcxx_shared_soname",
    out = "libstdc++.so",
    allow_symlink = True,
)

stub_library(
    name = "stdc++",
)

stub_library(
    name = "supc++",
)

stub_library(
    name = "stdc++fs",
)

copy_to_directory(
    name = "libstdcxx_library_search_directory",
    srcs = [
        ":stdc++",
        ":stdc++fs",
        ":supc++",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "libstdcxx_shared_elf_test",
    srcs = ["libstdcxx_shared_elf_test.sh"],
    data = [
        ":libstdcxx.shared",
        ":libstdcxx_shared_linker_name",
        ":libstdcxx_shared_real",
        ":libstdcxx_shared_soname",
        "@llvm//tools:llvm-readelf",
    ],
    env = {
        "LIBSTDCXX_SHARED": "$(rootpath :libstdcxx.shared)",
        "LIBSTDCXX_SHARED_LINKER_NAME": "$(rootpath :libstdcxx_shared_linker_name)",
        "LIBSTDCXX_SHARED_REAL": "$(rootpath :libstdcxx_shared_real)",
        "LIBSTDCXX_SHARED_SONAME": "$(rootpath :libstdcxx_shared_soname)",
        "READELF": "$(rootpath @llvm//tools:llvm-readelf)",
    },
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

write_file(
    name = "libstdcxx_link_smoke_src",
    out = "libstdcxx_link_smoke.cc",
    content = [
        "#include <stdexcept>",
        "#include <string>",
        "#include <vector>",
        "",
        "int main() {",
        "  std::vector<std::string> values;",
        "  values.emplace_back(\"libstdc++\");",
        "  if (values.front().size() != 9) throw std::runtime_error(\"bad string\");",
        "  return 0;",
        "}",
    ],
)

cc_binary(
    name = "libstdcxx_toolchain_dynamic_link_smoke",
    srcs = [":libstdcxx_link_smoke_src"],
    linkstatic = False,
    target_compatible_with = [
        "@platforms//os:linux",
        "//constraints/cxxstdlib:libstdcxx",
    ],
)

sh_test(
    name = "config_define_audit_test",
    srcs = ["config_define_audit_test.sh"],
    data = [
        "config_checks.bzl",
        "config_define_status.txt",
        "config_probe.bzl",
        "configure.bzl",
        "headers.bzl",
        "symbols.bzl",
        "@gcc//:libstdc++-v3/acinclude.m4",
        "@gcc//:libstdc++-v3/configure.ac",
    ],
    env = {
        "CONFIG_CHECKS": "$(rootpath config_checks.bzl)",
        "CONFIG_PROBE": "$(rootpath config_probe.bzl)",
        "CONFIGURE": "$(rootpath configure.bzl)",
        "GCC_ACINCLUDE": "$(rootpath @gcc//:libstdc++-v3/acinclude.m4)",
        "GCC_CONFIGURE_AC": "$(rootpath @gcc//:libstdc++-v3/configure.ac)",
        "HEADERS": "$(rootpath headers.bzl)",
        "STATUS_FILE": "$(rootpath config_define_status.txt)",
        "SYMBOLS": "$(rootpath symbols.bzl)",
    },
)

bzl_library(
    name = "config_checks",
    srcs = ["config_checks.bzl"],
)

bzl_library(
    name = "config_probe",
    srcs = ["config_probe.bzl"],
    deps = [
        ":config_checks",
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "configure",
    srcs = ["configure.bzl"],
)

bzl_library(
    name = "headers",
    srcs = ["headers.bzl"],
)

bzl_library(
    name = "symbols",
    srcs = ["symbols.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
