load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//runtimes:defs.bzl", "stub_library")
load("//toolchain/runtimes:cc_runtime_tool_binary.bzl", "cc_runtime_tool_binary")
load(
    ":configure.bzl",
    "libstdcxx_abi_baseline_pair",
    "libstdcxx_abi_tweaks_dir",
    "libstdcxx_atomic_lock_policy",
    "libstdcxx_atomic_word_dir",
    "libstdcxx_atomic_word_h",
    "libstdcxx_atomicity_dir",
    "libstdcxx_bits_opt_random_h",
    "libstdcxx_c_locale_h",
    "libstdcxx_c_locale_internal_h",
    "libstdcxx_cpu_defines_dir",
    "libstdcxx_cpu_defines_h",
    "libstdcxx_cpu_include_dir",
    "libstdcxx_ctype_base_h",
    "libstdcxx_ctype_inline_h",
    "libstdcxx_cxxabi_tweaks_h",
    "libstdcxx_enable_float128",
    "libstdcxx_error_constants_dir",
    "libstdcxx_error_constants_h",
    "libstdcxx_ext_opt_random_h",
    "libstdcxx_extern_template",
    "libstdcxx_have_attribute_visibility",
    "libstdcxx_host_triple",
    "libstdcxx_inline_version",
    "libstdcxx_messages_members_h",
    "libstdcxx_os_defines_h",
    "libstdcxx_os_include_dir",
    "libstdcxx_symver_style",
    "libstdcxx_thread_header_h",
    "libstdcxx_time_members_h",
    "libstdcxx_use_allocator_new",
    "libstdcxx_use_cxx11_abi",
    "libstdcxx_use_dual_abi",
)
load(":headers.bzl", "libstdcxx_cxxconfig_header", "libstdcxx_gthr_headers", "libstdcxx_largefile_config_header")
load(":libstdcxx_config_h.bzl", "libstdcxx_config_h")

package(default_visibility = ["//visibility:public"])

libstdcxx_config_h(
    name = "config_h",
    abi_baseline_pair = libstdcxx_abi_baseline_pair(),
    abi_tweaks_dir = libstdcxx_abi_tweaks_dir(),
    atomic_lock_policy = libstdcxx_atomic_lock_policy(),
    atomic_word_dir = libstdcxx_atomic_word_dir(),
    atomicity_dir = libstdcxx_atomicity_dir(),
    cpu_defines_dir = libstdcxx_cpu_defines_dir(),
    cpu_include_dir = libstdcxx_cpu_include_dir(),
    error_constants_dir = libstdcxx_error_constants_dir(),
    gthr_headers = ":gthr_headers",
    host_triple = libstdcxx_host_triple(),
    os_include_dir = libstdcxx_os_include_dir(),
    symver_style = libstdcxx_symver_style(),
)

filegroup(
    name = "config_h_header",
    srcs = [":config_h"],
    output_group = "config_h",
)

# Configured public headers mirror libstdc++-v3/include/Makefile.am. The
# selected source labels come from configure.host fields in :configure.bzl.
copy_file(
    name = "ctype_base_h",
    src = libstdcxx_ctype_base_h(),
    out = "public_host_headers/bits/ctype_base.h",
)

copy_file(
    name = "ctype_inline_h",
    src = libstdcxx_ctype_inline_h(),
    out = "public_host_headers/bits/ctype_inline.h",
)

copy_file(
    name = "os_defines_h",
    src = libstdcxx_os_defines_h(),
    out = "public_host_headers/bits/os_defines.h",
)

copy_file(
    name = "atomic_word_h",
    src = libstdcxx_atomic_word_h(),
    out = "public_host_headers/bits/atomic_word.h",
)

copy_file(
    name = "cxxabi_tweaks_h",
    src = libstdcxx_cxxabi_tweaks_h(),
    out = "public_host_headers/bits/cxxabi_tweaks.h",
)

copy_file(
    name = "cpu_defines_h",
    src = libstdcxx_cpu_defines_h(),
    out = "public_host_headers/bits/cpu_defines.h",
)

copy_file(
    name = "error_constants_h",
    src = libstdcxx_error_constants_h(),
    out = "public_host_headers/bits/error_constants.h",
)

copy_file(
    name = "basic_file_h",
    src = "@gcc//:libstdc++-v3/config/io/basic_file_stdio.h",
    out = "public_host_headers/bits/basic_file.h",
)

copy_file(
    name = "allocator_h",
    src = "@gcc//:libstdc++-v3/config/allocator/new_allocator_base.h",
    out = "public_host_headers/bits/c++allocator.h",
)

copy_file(
    name = "cstdio_h",
    src = "@gcc//:libstdc++-v3/config/io/c_io_stdio.h",
    out = "public_host_headers/bits/c++io.h",
)

copy_file(
    name = "c_locale_h",
    src = libstdcxx_c_locale_h(),
    out = "public_host_headers/bits/c++locale.h",
)

copy_file(
    name = "messages_members_h",
    src = libstdcxx_messages_members_h(),
    out = "public_host_headers/bits/messages_members.h",
)

copy_file(
    name = "time_members_h",
    src = libstdcxx_time_members_h(),
    out = "public_host_headers/bits/time_members.h",
)

copy_file(
    name = "precompiled_stdcxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/stdc++.h",
    out = "public_host_headers/bits/stdc++.h",
)

copy_file(
    name = "precompiled_stdtr1cxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/stdtr1c++.h",
    out = "public_host_headers/bits/stdtr1c++.h",
)

copy_file(
    name = "precompiled_extcxx_h",
    src = "@gcc//:libstdc++-v3/include/precompiled/extc++.h",
    out = "public_host_headers/bits/extc++.h",
)

copy_file(
    name = "bits_opt_random_h",
    src = libstdcxx_bits_opt_random_h(),
    out = "public_host_headers/bits/opt_random.h",
)

copy_file(
    name = "ext_opt_random_h",
    src = libstdcxx_ext_opt_random_h(),
    out = "public_host_headers/ext/opt_random.h",
)

libstdcxx_cxxconfig_header(
    name = "cxxconfig_h",
    basever = "@gcc//:gcc/BASE-VER",
    config_h = ":config_h_header",
    cxxconfig_template = "@gcc//:libstdc++-v3/include/bits/c++config",
    datestamp = "@gcc//:gcc/DATESTAMP",
    enable_float128 = libstdcxx_enable_float128(),
    extern_template = libstdcxx_extern_template(),
    have_attribute_visibility = libstdcxx_have_attribute_visibility(),
    inline_version = libstdcxx_inline_version(),
    use_allocator_new = libstdcxx_use_allocator_new(),
    use_cxx11_abi = libstdcxx_use_cxx11_abi(),
    use_dual_abi = libstdcxx_use_dual_abi(),
)

libstdcxx_gthr_headers(
    name = "gthr_headers",
    gthr_default_h = libstdcxx_thread_header_h(),
    gthr_h = "@gcc//:libgcc/gthr.h",
    gthr_posix_h = "@gcc//:libgcc/gthr-posix.h",
    gthr_single_h = "@gcc//:libgcc/gthr-single.h",
)

# Generated/configured headers must precede raw GCC headers, matching the
# include overlay order from libstdc++-v3/include/Makefile.am.
copy_to_directory(
    name = "generated_host_headers_include_search_directory",
    srcs = [
        ":allocator_h",
        ":atomic_word_h",
        ":basic_file_h",
        ":bits_opt_random_h",
        ":c_locale_h",
        ":cpu_defines_h",
        ":cstdio_h",
        ":ctype_base_h",
        ":ctype_inline_h",
        ":cxxabi_tweaks_h",
        ":cxxconfig_h",
        ":error_constants_h",
        ":ext_opt_random_h",
        ":gthr_headers",
        ":messages_members_h",
        ":os_defines_h",
        ":precompiled_extcxx_h",
        ":precompiled_stdcxx_h",
        ":precompiled_stdtr1cxx_h",
        ":time_members_h",
    ],
    allow_overwrites = True,
    root_paths = [
        "runtimes/libstdcxx/public_host_headers",
        "runtimes/libstdcxx/cxxconfig_h",
        "runtimes/libstdcxx/gthr_headers",
    ],
)

# Build-only private headers mirror libstdc++-v3/include/Makefile.am entries
# that are needed to compile the library but are not public installed headers.
copy_file(
    name = "c_locale_internal_h",
    src = libstdcxx_c_locale_internal_h(),
    out = "private_host_headers/bits/c++locale_internal.h",
)

copy_file(
    name = "compatibility_h",
    src = "@gcc//:libstdc++-v3/config/abi/compatibility.h",
    out = "private_host_headers/bits/compatibility.h",
)

libstdcxx_largefile_config_header(
    name = "largefile_config_h",
    config_h = ":config_h_header",
)

# During the libstdc++ build, private/generated headers override the installed
# raw headers in the same order GCC arranges its build include directory.
copy_to_directory(
    name = "build_headers_include_search_directory",
    srcs = [
        ":c_locale_internal_h",
        ":compatibility_h",
        ":generated_host_headers_include_search_directory",
        ":largefile_config_h",
    ],
    allow_overwrites = True,
    root_paths = [
        "runtimes/libstdcxx/generated_host_headers_include_search_directory",
        "runtimes/libstdcxx/private_host_headers",
        "runtimes/libstdcxx/largefile_config_h",
    ],
)

# Installed header search directory: raw GCC headers plus the backward ext
# compatibility aliases from libstdc++-v3/include/Makefile.am.
copy_to_directory(
    name = "headers_include_search_directory",
    srcs = [
        "@gcc//:libstdcxx_ext_compat_headers_include_search_directory",
        "@gcc//:libstdcxx_raw_headers_include_search_directory",
    ],
    allow_overwrites = True,
    include_external_repositories = ["**"],
    replace_prefixes = {
        "libstdcxx_ext_compat_headers_include_search_directory": "",
        "libstdcxx_raw_headers_include_search_directory": "",
    },
    visibility = ["//visibility:public"],
)

cc_library(
    name = "build_headers",
    hdrs = [
        ":build_headers_include_search_directory",
        ":headers_include_search_directory",
    ],
    includes = [
        "build_headers_include_search_directory",
        "headers_include_search_directory",
        "headers_include_search_directory/backward",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "abi_headers_include_search_directory",
    actual = ":generated_host_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "libstdcxx.shared",
    actual = "@gcc//:libstdcxx.shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "libstdcxx_shared_soname",
    actual = ":libstdcxx.shared",
)

copy_file(
    name = "libstdcxx_shared_linker_name",
    src = ":libstdcxx_shared_soname",
    out = "libstdc++.so",
    allow_symlink = True,
)

stub_library(
    name = "stdc++",
)

stub_library(
    name = "supc++",
)

stub_library(
    name = "stdc++fs",
)

copy_to_directory(
    name = "libstdcxx_library_search_directory",
    srcs = [
        ":stdc++",
        ":stdc++fs",
        ":supc++",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "libstdcxx_shared_elf_test",
    srcs = ["libstdcxx_shared_elf_test.sh"],
    data = [
        ":libstdcxx.shared",
        ":libstdcxx_shared_linker_name",
        ":libstdcxx_shared_soname",
        "@llvm//tools:llvm-readelf",
    ],
    env = {
        "LIBSTDCXX_SHARED": "$(rootpath :libstdcxx.shared)",
        "LIBSTDCXX_SHARED_LINKER_NAME": "$(rootpath :libstdcxx_shared_linker_name)",
        "LIBSTDCXX_SHARED_SONAME": "$(rootpath :libstdcxx_shared_soname)",
        "READELF": "$(rootpath @llvm//tools:llvm-readelf)",
    },
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

write_file(
    name = "libstdcxx_link_smoke_src",
    out = "libstdcxx_link_smoke.cc",
    content = [
        "#include <stdexcept>",
        "#include <string>",
        "#include <vector>",
        "",
        "int main() {",
        "  std::vector<std::string> values;",
        "  values.emplace_back(\"libstdc++\");",
        "  if (values.front().size() != 9) throw std::runtime_error(\"bad string\");",
        "  return 0;",
        "}",
    ],
)

cc_binary(
    name = "libstdcxx_toolchain_dynamic_link_smoke",
    srcs = [":libstdcxx_link_smoke_src"],
    linkstatic = False,
    target_compatible_with = [
        "@platforms//os:linux",
        "//constraints/cxxstdlib:libstdcxx",
    ],
)

cc_runtime_tool_binary(
    name = "libstdcxx-symbols-assembler",
    srcs = ["libstdcxx_symbols_assembler.c"],
)

sh_test(
    name = "libstdcxx_symbols_assembler_test",
    srcs = ["libstdcxx_symbols_assembler_test.sh"],
    data = [
        "libstdcxx_symbols_assembler_testdata/append.golden",
        "libstdcxx_symbols_assembler_testdata/base.ver",
        "libstdcxx_symbols_assembler_testdata/insert.golden",
        "libstdcxx_symbols_assembler_testdata/port_append.ver",
        "libstdcxx_symbols_assembler_testdata/port_insert.ver",
        ":libstdcxx-symbols-assembler",
    ],
    env = {
        "APPEND_GOLDEN": "$(rootpath libstdcxx_symbols_assembler_testdata/append.golden)",
        "ASSEMBLER": "$(rootpath :libstdcxx-symbols-assembler)",
        "BASE": "$(rootpath libstdcxx_symbols_assembler_testdata/base.ver)",
        "INSERT_GOLDEN": "$(rootpath libstdcxx_symbols_assembler_testdata/insert.golden)",
        "PORT_APPEND": "$(rootpath libstdcxx_symbols_assembler_testdata/port_append.ver)",
        "PORT_INSERT": "$(rootpath libstdcxx_symbols_assembler_testdata/port_insert.ver)",
    },
)

_AUTOCONF_AUDIT_DATA = [
    "//runtimes/libstdcxx/autoconf:config_define_status.txt",
    "//runtimes/libstdcxx/autoconf:config_macro_status.txt",
    "@gcc//:config/acx.m4",
    "@gcc//:config/cet.m4",
    "@gcc//:config/futex.m4",
    "@gcc//:config/gc++filt.m4",
    "@gcc//:config/gthr.m4",
    "@gcc//:config/hwcaps.m4",
    "@gcc//:config/iconv.m4",
    "@gcc//:config/lthostflags.m4",
    "@gcc//:config/multi.m4",
    "@gcc//:config/no-executables.m4",
    "@gcc//:config/tls.m4",
    "@gcc//:config/toolexeclibdir.m4",
    "@gcc//:config/unwind_ipinfo.m4",
    "@gcc//:libstdc++-v3/acinclude.m4",
    "@gcc//:libstdc++-v3/configure.ac",
    "@gcc//:libstdc++-v3/configure.host",
    "@gcc//:libstdc++-v3/crossconfig.m4",
    "@gcc//:libstdc++-v3/linkage.m4",
]

_AUTOCONF_AUDIT_ENV = {
    "GCC_ACINCLUDE": "$(rootpath @gcc//:libstdc++-v3/acinclude.m4)",
    "GCC_CONFIG_ACX": "$(rootpath @gcc//:config/acx.m4)",
    "GCC_CONFIG_CET": "$(rootpath @gcc//:config/cet.m4)",
    "GCC_CONFIG_FUTEX": "$(rootpath @gcc//:config/futex.m4)",
    "GCC_CONFIG_GCXXFILT": "$(rootpath @gcc//:config/gc++filt.m4)",
    "GCC_CONFIG_GTHR": "$(rootpath @gcc//:config/gthr.m4)",
    "GCC_CONFIG_HWCAPS": "$(rootpath @gcc//:config/hwcaps.m4)",
    "GCC_CONFIG_ICONV": "$(rootpath @gcc//:config/iconv.m4)",
    "GCC_CONFIG_LTHOSTFLAGS": "$(rootpath @gcc//:config/lthostflags.m4)",
    "GCC_CONFIG_MULTI": "$(rootpath @gcc//:config/multi.m4)",
    "GCC_CONFIG_NO_EXECUTABLES": "$(rootpath @gcc//:config/no-executables.m4)",
    "GCC_CONFIG_TLS": "$(rootpath @gcc//:config/tls.m4)",
    "GCC_CONFIG_TOOLEXECLIBDIR": "$(rootpath @gcc//:config/toolexeclibdir.m4)",
    "GCC_CONFIG_UNWIND_IPINFO": "$(rootpath @gcc//:config/unwind_ipinfo.m4)",
    "GCC_CONFIGURE_AC": "$(rootpath @gcc//:libstdc++-v3/configure.ac)",
    "GCC_CONFIGURE_HOST": "$(rootpath @gcc//:libstdc++-v3/configure.host)",
    "GCC_CROSSCONFIG": "$(rootpath @gcc//:libstdc++-v3/crossconfig.m4)",
    "GCC_LINKAGE": "$(rootpath @gcc//:libstdc++-v3/linkage.m4)",
    "MACRO_STATUS_FILE": "$(rootpath //runtimes/libstdcxx/autoconf:config_macro_status.txt)",
    "STATUS_FILE": "$(rootpath //runtimes/libstdcxx/autoconf:config_define_status.txt)",
}

_AUTOCONF_MODEL_DATA = [
    "cc_configure_probe.bzl",
    "configure.bzl",
    "headers.bzl",
    "libstdcxx_config_h.bzl",
    "symbols.bzl",
    "//runtimes/libstdcxx/autoconf:acinclude_checks.bzl",
    "//runtimes/libstdcxx/autoconf:configure_ac_checks.bzl",
    "//runtimes/libstdcxx/autoconf:crossconfig_checks.bzl",
    "//runtimes/configure:native_autoconf_checks.bzl",
]

_AUTOCONF_MODEL_ENV = {
    "ACINCLUDE_CHECKS": "$(rootpath //runtimes/libstdcxx/autoconf:acinclude_checks.bzl)",
    "CC_CONFIGURE_PROBE": "$(rootpath cc_configure_probe.bzl)",
    "CONFIGURE": "$(rootpath configure.bzl)",
    "CONFIGURE_AC_CHECKS": "$(rootpath //runtimes/libstdcxx/autoconf:configure_ac_checks.bzl)",
    "CROSSCONFIG_CHECKS": "$(rootpath //runtimes/libstdcxx/autoconf:crossconfig_checks.bzl)",
    "HEADERS": "$(rootpath headers.bzl)",
    "LIBSTDCXX_CONFIG_H": "$(rootpath libstdcxx_config_h.bzl)",
    "NATIVE_AUTOCONF_CHECKS": "$(rootpath //runtimes/configure:native_autoconf_checks.bzl)",
    "SYMBOLS": "$(rootpath symbols.bzl)",
}

_AUTOCONF_DOC_DATA = [
    "//runtimes/libstdcxx/autoconf:autoconf.README.md",
    "//runtimes/libstdcxx/autoconf:autoconf.checks.md",
    "//runtimes/libstdcxx/autoconf:autoconf.usage.md",
]

_AUTOCONF_DOC_ENV = {
    "AUTOCONF_CHECKS": "$(rootpath //runtimes/libstdcxx/autoconf:autoconf.checks.md)",
    "AUTOCONF_README": "$(rootpath //runtimes/libstdcxx/autoconf:autoconf.README.md)",
    "AUTOCONF_USAGE": "$(rootpath //runtimes/libstdcxx/autoconf:autoconf.usage.md)",
}

sh_test(
    name = "config_define_audit_test",
    srcs = ["tools/autoconf_inventory.sh"],
    args = ["check-status"],
    data = _AUTOCONF_AUDIT_DATA + _AUTOCONF_MODEL_DATA,
    env = dict(_AUTOCONF_AUDIT_ENV.items() + _AUTOCONF_MODEL_ENV.items()),
)

sh_test(
    name = "autoconf_inventory_test",
    srcs = ["tools/autoconf_inventory.sh"],
    args = ["check-docs"],
    data = _AUTOCONF_AUDIT_DATA + _AUTOCONF_DOC_DATA,
    env = dict(_AUTOCONF_AUDIT_ENV.items() + _AUTOCONF_DOC_ENV.items()),
)

bzl_library(
    name = "cc_configure_probe",
    srcs = ["cc_configure_probe.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "libstdcxx_config_h",
    srcs = ["libstdcxx_config_h.bzl"],
    deps = [
        ":cc_configure_probe",
        "//runtimes/libstdcxx/autoconf:configure_ac_checks",
    ],
)

bzl_library(
    name = "configure",
    srcs = ["configure.bzl"],
)

bzl_library(
    name = "headers",
    srcs = ["headers.bzl"],
)

bzl_library(
    name = "symbols",
    srcs = ["symbols.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
