load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//runtimes:defs.bzl", "stub_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "acinclude.m4.bzl",
    "configure.ac.bzl",
    "crossconfig.m4.bzl",
    "gcc_config_checks.bzl",
    "libstdcxx_symbols_version_script.bzl",
    "linkage.m4.bzl",
])

alias(
    name = "gthr_headers",
    actual = "@gcc//:gthr_headers",
)

alias(
    name = "config_h",
    actual = "@gcc//:config_h",
)

alias(
    name = "config_h_header",
    actual = "@gcc//:config_h_header",
)

alias(
    name = "cxxconfig_h",
    actual = "@gcc//:cxxconfig_h",
)

alias(
    name = "generated_host_headers_include_search_directory",
    actual = "@gcc//:generated_host_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "largefile_config_h",
    actual = "@gcc//:largefile_config_h",
)

alias(
    name = "build_headers_include_search_directory",
    actual = "@gcc//:build_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "headers_include_search_directory",
    actual = "@gcc//:headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "build_headers",
    actual = "@gcc//:build_headers",
    visibility = ["//visibility:public"],
)

alias(
    name = "abi_headers_include_search_directory",
    actual = "@gcc//:abi_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "libstdcxx.shared",
    actual = "@gcc//:libstdcxx.shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "libstdcxx_shared_soname",
    actual = ":libstdcxx.shared",
)

copy_file(
    name = "libstdcxx_shared_linker_name",
    src = ":libstdcxx_shared_soname",
    out = "libstdc++.so",
    allow_symlink = True,
)

stub_library(
    name = "stdc++",
)

stub_library(
    name = "supc++",
)

copy_file(
    name = "stdc++fs",
    src = "@gcc//:libstdcxxfs.static",
    out = "libstdc++fs.a",
    allow_symlink = True,
)

copy_to_directory(
    name = "libstdcxx_library_search_directory",
    srcs = [
        ":stdc++",
        ":stdc++fs",
        ":supc++",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "acinclude_checks",
    deps = [
        ":gcc_config_checks",
        ":linkage_checks",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "crossconfig_checks",
    deps = [
        ":gcc_config_checks",
        ":linkage_checks",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "configure_ac_checks",
    deps = [
        ":acinclude_checks",
        ":gcc_config_checks",
        ":linkage_checks",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "gcc_config_checks",
    srcs = ["gcc_config_checks.bzl"],
    deps = ["//runtimes/libstdcxx/autoconf:checks"],
)

bzl_library(
    name = "linkage_checks",
    deps = ["//runtimes/libstdcxx/autoconf:checks"],
)

bzl_library(
    name = "libstdcxx_config_h",
    srcs = ["libstdcxx_config_h.bzl"],
    deps = [
        ":configure_ac_checks",
        "//runtimes/libstdcxx/autoconf:autoconf_config",
        "//runtimes/libstdcxx/autoconf:autoconf_hdr",
    ],
)

bzl_library(
    name = "target_config",
    srcs = ["target_config.bzl"],
    deps = [
        "//3rd_party/gcc:version",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "acinclude.m4",
    srcs = ["acinclude.m4.bzl"],
    deps = [
        ":gcc_config_checks",
        ":linkage.m4",
        "//3rd_party/gcc:version",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "configure.ac",
    srcs = ["configure.ac.bzl"],
    deps = [
        ":acinclude.m4",
        ":gcc_config_checks",
        ":linkage.m4",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "crossconfig.m4",
    srcs = ["crossconfig.m4.bzl"],
    deps = [
        ":gcc_config_checks",
        ":linkage.m4",
        "//3rd_party/gcc:version",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "linkage.m4",
    srcs = ["linkage.m4.bzl"],
    deps = [
        "//3rd_party/gcc:version",
        "//runtimes/libstdcxx/autoconf:checks",
    ],
)

bzl_library(
    name = "libstdcxx_symbols_version_script",
    srcs = ["libstdcxx_symbols_version_script.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "libstdcxx_cxxconfig_header",
    srcs = ["libstdcxx_cxxconfig_header.bzl"],
)

bzl_library(
    name = "libstdcxx_gthr_headers",
    srcs = ["libstdcxx_gthr_headers.bzl"],
)

bzl_library(
    name = "libstdcxx_largefile_config_header",
    srcs = ["libstdcxx_largefile_config_header.bzl"],
)
