load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//runtimes:defs.bzl", "stub_library")

alias(
    name = "libunwind.static",
    actual = "@llvm-project//libunwind:libunwind.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libunwind.shared",
    actual = "@llvm-project//libunwind:libunwind.shared",
    visibility = ["//visibility:public"],
)

copy_file(
    name = "libunwind_static_archive",
    src = ":libunwind.static",
    out = "static/libunwind.a",
    allow_symlink = True,
    visibility = ["//visibility:public"],
)

stub_library(
    name = "gcc_s",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "stub_libgcc_s",
    flag_values = {
        "//config:experimental_stub_libgcc_s": "True",
    },
)

copy_to_directory(
    name = "libunwind_static_library_search_directory",
    srcs = [
        ":libunwind_static_archive",
    ] + select({
        ":stub_libgcc_s": [":gcc_s"],
        "//conditions:default": [],
    }),
    replace_prefixes = {
        "static": "",
    },
    visibility = ["//visibility:public"],
)

copy_file(
    name = "libunwind_shared_soname",
    src = ":libunwind.shared",
    out = "dynamic/libunwind.so.1",
    allow_symlink = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "libunwind_shared_linker_script",
    outs = ["dynamic/libunwind.so"],
    cmd = "printf '%s\n' 'GROUP ( libunwind.so.1 )' > $@",
)

copy_to_directory(
    name = "libunwind_dynamic_library_search_directory",
    srcs = [
        ":libunwind_shared_linker_script",
        ":libunwind_shared_soname",
    ] + select({
        ":stub_libgcc_s": [":gcc_s"],
        "//conditions:default": [],
    }),
    replace_prefixes = {
        "dynamic": "",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "libunwind_library_search_directory",
    actual = ":libunwind_dynamic_library_search_directory",
    visibility = ["//visibility:public"],
)
