load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//runtimes:defs.bzl", "stub_library")

alias(
    name = "libunwind.static",
    actual = "@llvm-project//libunwind:libunwind.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libunwind.shared",
    actual = "@llvm-project//libunwind:libunwind.shared",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "static_runtime_lib",
    srcs = [
        ":libunwind.static",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dynamic_runtime_lib",
    srcs = [
        ":libunwind.shared",
    ],
    visibility = ["//visibility:public"],
)

stub_library(
    name = "unwind",
    visibility = ["//visibility:public"],
)

stub_library(
    name = "gcc_s",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_llvm_libgcc",
    flag_values = {
        "//config:experimental_use_llvm_libgcc": "True",
    },
)

copy_to_directory(
    name = "libunwind_library_search_directory",
    srcs = [
        ":unwind",
    ] + select({
        ":use_llvm_libgcc": [":gcc_s"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
