alias(
    name = "libunwind.static",
    actual = "@llvm-project//libunwind:libunwind.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libunwind.shared",
    actual = "@llvm-project//libunwind:libunwind.shared",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "static_runtime_lib",
    srcs = [
        ":libunwind.static",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dynamic_runtime_lib",
    srcs = [
        ":libunwind.shared",
    ],
    visibility = ["//visibility:public"],
)
